Add interface INavigablePage to enable any pages and user controls, which load dynamically from MEF, accessible to NavigationService.
Signed-off-by: Teerachai <tlaothong@gmail.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Page1.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Page1.xaml
@@ -9,5 +9,6 @@
            Title="Page1 Page">
     <Grid x:Name="LayoutRoot">
         <TextBlock Text="Hello?" />
+        <Button x:Name="btn" Content="Go" Click="btn_Click" />
     </Grid>
 </navigation:Page>
