--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/Views/Page1.xaml
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/Views/Page1.xaml
@@ -30,17 +30,12 @@
 		<Binding Source="{StaticResource Page1ViewModelDataSource}"/>
 	</navigation:Page.DataContext>
     <Grid x:Name="LayoutRoot" DataContext="{Binding Source={StaticResource Page1ViewModelDataSource}}">
-<<<<<<< HEAD
+
         <ListBox ItemTemplate="{StaticResource DataTemplate}" Margin="8,0,212,8" ItemsSource="{Binding Popups}" SelectedItem="{Binding SelectedWindow, Mode=TwoWay}" Height="80" VerticalAlignment="Bottom"/>
         <ListBox x:Name="GameRoomListBox" HorizontalAlignment="Right" Margin="0,8,8,8" Width="200" ItemsSource="{Binding Games}" ItemTemplate="{StaticResource GameRoomsListTemplate}" ItemContainerStyle="{StaticResource GameRoomsItemContainerStyle}"/>
         <Grid DataContext="{Binding SelectedItem, ElementName=GameRoomListBox}" Margin="8,8,212,92" >
-            <ContentPresenter Content="{Binding InformationContent, Mode=OneWay}"/>
+            <ContentPresenter x:Name="infoContentPresenter" Content="{Binding InformationContent, Mode=OneWay}"/>
         </Grid>
-=======
-        <TextBlock x:Name="txt" />
-        <ListBox ItemTemplate="{StaticResource DataTemplate}" Margin="140,101,300,79" ItemsSource="{Binding Popups}" SelectedItem="{Binding SelectedWindow, Mode=TwoWay}" DataContext="{Binding}"/>
-    	<ListBox HorizontalAlignment="Right" ItemTemplate="{StaticResource IGameApplicationInformationTemplate}" ItemsSource="{Binding Games}" Margin="0,101,65,79" Width="200"/>
-    	<Button x:Name="ShowWindow" Content="Button" HorizontalAlignment="Left" Height="39" Margin="34,37,0,0" VerticalAlignment="Top" Width="144" Click="ShowWindow_Click"/>
->>>>>>> b333ceabf9e9d2d4016704ba05f4bacda2c78794
+
     </Grid>
 </navigation:Page>
