--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/ChipExchangeWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/ChipExchangeWindow.xaml
@@ -2,7 +2,7 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.View.ChipExchangeWindow"
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.Views.ChipExchangeWindow"
            Width="640" Height="550" 
            Title="ChipExchangeWindow" FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
@@ -12,7 +12,7 @@
         </Grid.RowDefinitions>
 
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
-    	<controls:TabControl FontSize="11">
+    	<controls:TabControl x:Name="MenuTabControl" FontSize="11">
     		<controls:TabItem x:Name="DepositTabItem" Header="Deposit">
     			<Grid Background="#FFE5E5E5">
     				<Grid Height="83" VerticalAlignment="Top">
