--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Silverlight/MainPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Silverlight/MainPage.xaml
@@ -7,6 +7,6 @@
     d:DesignHeight="300" d:DesignWidth="400">
 
     <Grid x:Name="LayoutRoot" Background="White">
-
+        <Button Content="Account manager" Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" x:Name="AccountManagerButton" Click="AccountManagerButton_Click"  VerticalAlignment="Top" Width="75" />
     </Grid>
 </UserControl>
