Commit Casinova project 25/10/2010 11.49
Signed-off-by: pongsak <pongsak@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
@@ -4,7 +4,7 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
                  xmlns:TheS_Casinova="clr-namespace:TheS.Casinova"
-                 x:Class="TheS.Casinova.Colors.Views.GamePlayPage"
+                 x:Class="TheS.Casinova.TwoWins.Views.GamePlayPage"
            d:DesignWidth="640" d:DesignHeight="480"
            Title="Colors GamePlayPage Page" mc:Ignorable="d">
     <Grid x:Name="LayoutRoot">
