--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Page1.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Page1.xaml
@@ -1,4 +1,4 @@
-﻿<navigation:Page x:Class="TheS.Casinova.Colors.Page1" 
+﻿<navigation:Page x:Class="TheS.Casinova.TwoWins.Page1" 
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
