--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Silverlight/App.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Silverlight/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="TheS.Casinova.Colors.Silverlight.App"
+             x:Class="TheS.Casinova.TwoWins.Silverlight.App"
              >
     <Application.Resources>
         
