--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Popups/BetData.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Popups/BetData.xaml
@@ -2,7 +2,11 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.Colors.Popups.ChildWindow1"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" 
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+           mc:Ignorable="d" 
+           x:Class="TheS.Casinova.MagicNine.Popups.BetData"
            Width="400" Height="300" 
            Title="Statistic">
     <Grid x:Name="LayoutRoot" Margin="2">
@@ -11,7 +15,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel x:Name="DataStack" Margin="0,37,0,0" >
-        	<sdk:DataGrid AutoGenerateColumns="False" Height="196" x:Name="dataGrid1" Width="378" />
+            <sdk:DataGrid AutoGenerateColumns="False" Height="196" x:Name="dataGrid1" Width="378" />
         </StackPanel>
         <Button x:Name="GraphButton" Content="Graph" Click="GraphButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" />
         <Button x:Name="BetDataButton" Content="Bet Data" Click="BetDataButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,79,0" Grid.Row="1" />
